surf/css/nav.css
/* ############ SCROLL TO TOP########### */


.scroll-to-top{
    background-color: rgba(253, 253, 253, 0.781);
    width: 55px;
    height: 40px;
    border-radius: 25px;
    cursor: pointer;
    position: fixed;
    right: 3%;
    bottom: 3%;
    border: solid #242423 2px;
    text-align: center;
    font-size: 12px;
    /* display: none; */
    /* z-index: -1; */
    opacity: 0;
    transition: all 0.5s ease;
    /*To disable text selection on tap or double click*/
    -moz-user-select: none; /* Firefox */
    -ms-user-select: none; /* Internet Explorer */
    -khtml-user-select: none; /* KHTML browsers (e.g. Konqueror) */
    -webkit-user-select: none; /* Chrome, Safari, and Opera */
    -webkit-touch-callout: none; /* Disable Android and iOS callouts*/
}

.scroll-to-top img{
    margin: 2px;
    width: auto;
    animation: upup 1s infinite alternate;
}
.scroll-to-top.fade{
    opacity: 1;
    z-index: 2;
    /* transition: all 0.5s ease; */
}
@keyframes upup{
    0%{
        transform: translateY(0px);
    }
    100%{
        transform: translateY(7px);
    }
}
/* *************LOGIN SIGNUP FORM STYLING************** */

.loginwindow,.signupwindow{
    position: fixed;
    z-index: 2;
    width: 100%;
    height: 100%;
    top: 0%;
    left: 0%;
    /* opacity: 0; */
    background-color: #ffffffb9;
    transition: all 0.5s;
    text-align: center;
    display: none;
    justify-content: center;
}

/* Add styles to the form container */
.ls-form {
    margin: auto;
    max-width: 300px;
    padding: 10px;
    border-radius: 4px;
    background-color: white;
}

.ls-form p{
    font-size: 14px;
}

.close-form{
    position: relative;
    left: 93%;
    cursor: pointer;
}
.close-l1,.close-l2{
    display: block;
    position: absolute;
    content: "";
    width: 25px;
    height: 2px;
    background-color: black;
    margin: 5px 0 5px 0;
    transition: all 0.5s ease;
}
.close-l1{
    transform: rotateZ(-45deg);
}
.close-l2{
    transform: rotateZ(45deg);
    /* width: 15px; */
    /* transform: translateX(10px); */
}


.ls-label {
    display: block;
    letter-spacing: 4px;
    padding-top: 30px;
    text-align: left;
}
.ls-label-text {
    color:#000000;
    cursor: text;
    font-size: 16px;
    line-height: 20px;
    text-transform: uppercase;
    transform: translateY(-34px);
    transition: all 0.3s;
    text-align: left;
}

.ls-label-text:focus {
    color: #000000;
    font-size: 13px;
    transform: translateY(-74px);
}

.ls-label input {
    border: 0;
    border-bottom: 2px solid #000000;
    color: #000000;
    font-size: 25px;
    letter-spacing: -1px;
    outline: 0;
    text-align: left;
    transition: all 0.3s;
    width: 100%;
}

.ls-label input:focus+.ls-label-text {
    color: #000000;
    font-size: 13px;
    transform: translateY(-74px);
}

.ls-label input:valid+.ls-label-text,.ls-label input:active+.ls-label-text {
    font-size: 13px;
    transform: translateY(-74px);
}

/* Set a style for the submit/login button */
.ls-form .btn,.ls-form .secondbtn {
    background-color: rgb(0, 179, 66);
    color: white;
    padding: 16px 20px;
    border-radius: 4px;
    border: none;
    cursor: pointer;
    width: 100%;
    margin-bottom:10px;
    opacity: 0.8;
}

.ls-form .secondbtn {
    background-color: #4c9daf;
    /* height: 40px; */
    padding: 12px 20px;
    font-size: 13px;
}

/* Add some hover effects to buttons */
.loginsignupforms .btn:hover, .open-button:hover {
  opacity: 1;
}

/* *************HEADER STYLING************** */
nav{
    display: flex;
    position: fixed;
    width: 100%;
    z-index: 2;
    justify-content: space-around;
    padding: 10px 10%;
    font-size: 18px;
    font-weight: 900;
    color: black;
    transition: all 1s ease;
}
nav.highlight{
    /* padding: 5px 10%; */
    /* padding-top: 5px; */
    background-color: rgba(255, 255, 255, 0.898);
}
.logo{
    flex: 1;
}
.logo img{
    height: 60px;
    transition: all 1s ease;
}
.logo img.small{
    height: 40px;
}
.navlinks{
    flex: 1;
    margin: auto;
    display: flex;
    justify-content: flex-end;
    /* background: crimson; */
}
.navlinks li{
    list-style: none;
    margin: auto 0 auto 90px;
}
.navlinks li a{
    color: black;
}

.cta{
    /* margin-right: 0; */
    margin: auto 0 auto 90px;
    padding: 10px;
    cursor: pointer;
    border-radius: 20px;
    color: black;
    background-color: darkorange;
}
.mobile-signup{
    display: none;
}

@media screen and (max-width:1024px){
    .navlinks li{
        margin: auto 0 auto 50px;  
    }
    .cta{
        margin: auto 0 auto 50px;
    }
}

@media screen and (max-width:768px){
    .scroll-to-top{
        width: 51px;
        height: 40px;
        cursor: pointer;
        right: 3%;
        bottom: 60px;
        border: solid #242423 2px;
        margin-bottom: 10px;
        font-size: 10px;
        transition: all 0.5s ease;
        -webkit-tap-highlight-color: transparent;
    }
    
    .logo{
        z-index: 1;
    }
    .logo img{
        height: 50px;
    }

    .mobile-signup{
        display: block;
    }
    nav{
        z-index: 2;
        padding: 10px 5%;
    }
    .navlinks{
        position: fixed;
        top: 0;
        padding: 20vh 0px;
        height: 100%;
        width: 100%;
        display:flex;
        flex-direction: column;
        background: rgb(156, 187, 175);
        background-size: cover;
        clip-path: circle(50px at 120% 0%);
        -webkit-clip-path: circle(50px at 120% 0%);
        transition: all 0.5s ease;
    }
    .navlinks.open{
        clip-path: circle(1500px at 120% 0%);
        -webkit-clip-path: circle(1500px at 120% 0%);
    }
    .navlinks li{
        opacity: 0;
        margin: auto;
    }
    .navlinks li.fade{
        opacity: 1;
    }
    /* .navlinks li:last-child{
        margin-bottom: 20vh;
    } */
    .navlinks li:nth-child(1){
        transition: all 0.5s ease 0.1s;
    }
    .navlinks li:nth-child(2){
        transition: all 0.5s ease 0.2s;
    }
    .navlinks li:nth-child(3){
        transition: all 0.5s ease 0.3s;
    }
    .navlinks li:nth-child(4){
        transition: all 0.5s ease 0.4s;
    }
   
    .cta{
        /* z-index: 2;
        position: absolute;
        top: 0; */
        padding: 7px;
        font-size: 16px;
        transition: all 0.5s ease 0.5s;
    }
    .cta.fade{
        opacity: 0;
        transition: all 0.5s ease-out;
    }
    .hamburger{
        z-index: 1;
        margin: auto 0px auto 20px;
    }
    .line1,.line2,.line3{
        display: block;
        content: "";
        width: 30px;
        height: 2px;
        background-color: black;
        margin: 5px 0 5px 0;
        transition: all 0.5s ease;
    }
    .line1{
        width: 15px;
        transform: translateX(15px);
    }
    .line3{
        width: 15px;
        /* transform: translateX(10px); */
    }
    .line1.close{
        transform: translate(13px,1px) rotate(-45deg);
    }
    .line2.close{
        transform: rotate(45deg);
    }
    .line3.close{
        width: 16px;
        transform: translate(1px,-1.5px) rotate(-45deg);
    }
    
}


/* *********FOOTER STYLING************** */

footer{
    /* background: rgba(22, 22, 22, 0.39); */
    background: rgb(22, 22, 22) url(".././assets/images/black.svg") no-repeat center;
    background-size: cover;
    z-index: 0;
    color: white;
}

/* ***********NEWSLETTER SECTION************** */
.newsletter-section{
    background: rgba(156, 187, 175, 0.658) url(".././assets/images/blue.svg") no-repeat center ;
    background: rgb(133, 233, 195);
    background-size: cover;
    /* box-shadow: 0px 10px 1px #b1e5ee; */
    display: flex;
    /* color: white; */
}


.newsletter{
    padding: 50px;
    background-color: rgba(214, 214, 214, 0.192);
	box-shadow: 0 15px 30px 1px rgba(128, 128, 128, 0.31);
    border-radius: 5px;
    width: 50%;
    margin: 50px auto;
    text-align: center;
}
.newsletter h6{
    font-size: 35px;
    font-weight: 500;
}
.newsletter p{
    padding: 30px;
}

.newsletter input {
    width: 210px;
    display: inline-block;
    text-align: center;
    border-radius: 7px;
    background: rgb(223, 223, 223);
    padding: 1em 2em;
    outline: none;
    border: none;
    color: #222;
    transition: 0.3s linear;
}
::placeholder{color: #999;}
.newsletter form input:focus {background: rgb(255, 255, 255);}

.newsletter form button {
    background-image: linear-gradient(to left, rgba(211, 211, 211, 0.86) 0%, rgba(0, 247, 255, 0.75) 100%);
    /* background-image: linear-gradient(to left, rgba(255, 146, 202, 0.75) 0%, rgba(145, 149, 251, 0.86) 100%); */
    /* box-shadow: 0 9px 25px -5px #91effb; */
    font-family: 'Abel', sans-serif;
    padding: 0.5em 1.9em;
    margin: 2.3em 0 0 0;
    border-radius: 7px;
    font-size: 1.4em;
    cursor: pointer;
    color: #FFFFFF;
    font-size: 1em;
    outline: none;
    border: none;
    transition: 0.3s linear;

}
.newsletter form button:hover{transform: translatey(2px);}
.newsletter form button:active{transform: translatey(5px);}
/* ***********INNER FOOTER SECTION************** */

.innerfooter{
    z-index: 1;
    padding: 20px 0px;
    display: flex;
    justify-content: space-around;
}
.moto{
    flex: 1;
    text-align: center;
}
.moto img{
    filter: invert(1);
}
.footerlinks{
    display: flex;
    flex: 2;
    justify-content: space-around;
}
.footerlinks ul h6{
    font-size: 14px;
    margin: 20px;
    font-weight: bold;
}
.footerlinks li{
    list-style: none;
    margin: 20px;
}
.footerlinks a{
    color: white;
    font-size: 14px;
}
.copy{
    width: 90%;
    margin: auto;
    font-size: 12px;
    border-top: 0.1px dotted #ffffff;
    padding: 10px 0px 25px 0px;
}

@media screen and (max-width:768px){
/* ***********NEWSLETTER SECTION************** */


    .newsletter-section{
        flex-direction: column;
        background-size: cover;
    }

    .newsletter{
        padding: 10px;
        width: 90%;
        margin: 50px auto;
    }
    .newsletter h6{
        font-size: 35px;
        font-weight: 500;
    }
    .newsletter p{
        padding: 30px;
        padding-top: 10px;
    }
    .newsletter form input{
        margin-top: 10px;
    }

/* ***********INNER FOOTER SECTION************** */

    .innerfooter{
        padding: 10px 0px;
        display: block;
    }
    .footerlinks{
        padding-top: 20px;
        text-align: center;
    }
}

